--- a/Advanced Calculus 2/preamble.tex
+++ b/Advanced Calculus 2/preamble.tex
@@ -33,6 +33,9 @@
 \usepackage{nameref}
 \usepackage{multicol,array}
 \usepackage{tikz-cd}
+\usepackage{array}
+\usepackage{multirow}% http://ctan.org/pkg/multirow
+\usepackage{graphicx}
 
 % Colors
 \usepackage[dvipsnames]{xcolor}
